...
                card_view:layout_constraintHorizontal_bias="0.0"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent"
                card_view:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/content"
                android:layout_width="187dp"
                android:layout_height="41dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
...
                card_view:layout_constraintHorizontal_bias="1.0"
                card_view:layout_constraintStart_toEndOf="@+id/tradeButton"
                card_view:layout_constraintTop_toBottomOf="@+id/id_text"
                card_view:layout_constraintVertical_bias="1.0" />

            <Button
                android:id="@+id/spareChangeButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="357dp"
                android:layout_height="42dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
...
